--- a/index.html
+++ b/index.html
@@ -34,11 +34,7 @@
     <section id="hero">
         <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
             <div class="container">
-                <a class="navbar-brand fs-4" href="#"> <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
-                        fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
-                        <path
-                            d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z" />
-                    </svg> Anna Menegasso</a>
+                <a class="navbar-brand fs-4" href="#"> Anna Menegasso</a>
                 <button class="navbar-toggler shadow-none border-0" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -107,32 +103,34 @@
                     <h2 class="titulo-secao" data-aos="fade-right" data-aos-duration="1000">
                         Temos a melhor solução para seu espaço
                     </h2>
-                    <p class="descricao-secao" data-aos="fade-right" data-aos-duration="1100">
-                        Linhas retas e inspiradoras, design marcante e inteligente são elementos de destaques nos
-                        projetos, sempre aliados a
-                        iluminação, ventilação, transparência e funcionalidade.
+                    <p class="descricao-secao" data-aos="fade-right" data-aos-duration="1500">
+                        Nossa expertise abrange desde projetos residenciais até complexos comerciais. Oferecemos
+                        soluções personalizadas que
+                        transformam espaços, combinando inovação e funcionalidade. Cada projeto é conduzido com
+                        dedicação exclusiva, garantindo
+                        resultados que superam expectativas.
                     </p>
 
                     <div class="servicos-lista">
-                        <div class="servico-item" data-aos="fade-right" data-aos-duration="1300">
+                        <div class="servico-item" data-aos="fade-right" data-aos-duration="1100">
                             <span class="numero">01</span> Projetos Residenciais
                         </div>
-                        <div class="servico-item" data-aos="fade-right" data-aos-duration="1400">
+                        <div class="servico-item" data-aos="fade-right" data-aos-duration="1150">
                             <span class="numero">02</span> Projetos de Interiores
                         </div>
-                        <div class="servico-item" data-aos="fade-right" data-aos-duration="1500">
+                        <div class="servico-item" data-aos="fade-right" data-aos-duration="1200">
                             <span class="numero">03</span> Arquitetura Comercial
                         </div>
-                        <div class="servico-item" data-aos="fade-right" data-aos-duration="1600">
+                        <div class="servico-item" data-aos="fade-right" data-aos-duration="1250">
                             <span class="numero">04</span> Paisagismo
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-5 d-flex flex-column align-items-center justify-content-center">
                     <img src="img/ApartamentoL.webp" alt="Foto Apartamento L" class="imagem-secao" data-aos="fade-left"
-                        data-aos-duration="1700" />
+                        data-aos-duration="1300" />
                     <a href="https://api.whatsapp.com/send/?phone=5534998647261&text&type=phone_number&app_absent=0"
-                        target="_blank" class="btn-orcamento" data-aos="fade-left" data-aos-duration="1700">FAZER
+                        target="_blank" class="btn-orcamento" data-aos="fade-left" data-aos-duration="1300">FAZER
                         ORÇAMENTO</a>
                 </div>
             </div>
@@ -273,7 +271,7 @@
             <div class="row justify-content-center g-4 mt-4">
                 <div class="col-12 col-sm-6 col-md-4" data-aos="fade-up" data-aos-duration="1100">
                     <div class="project-card">
-                        <img src="img/Quarto-criança.webp" class="img-fluid rounded" alt="Imagem cozinha">
+                        <img src="img/Quarto-criança.webp" class="img-fluid rounded" alt="Imagem quarto de criança">
                         <div class="project-overlay">
                             <h3>Quarto Infantil</h3>
                             <p>Projeto de quarto infantil temático de super-herói, com decoração vibrante, móveis
@@ -297,10 +295,10 @@
 
                 <div class="col-12 col-sm-6 col-md-4" data-aos="fade-up" data-aos-duration="1200">
                     <div class="project-card">
-                        <img src="img/Cozinha-RR.webp" class="img-fluid rounded" alt="Imagem sala">
+                        <img src="img/escritorio.webp" class="img-fluid rounded" alt="Imagem escritorio">
                         <div class="project-overlay">
-                            <h3>Sala V</h3>
-                            <p>Ambiente acolhedor com design integrado</p>
+                            <h3>Escritório NF</h3>
+                            <p>Projeto de interiores para escritório da Residência NF no condomínio Splêndido.</p>
                             <a href="#" class="project-btn">Ir para projeto</a>
                         </div>
                     </div>
