--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
 
     <!-- STYLESHEET -->
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/aos.css">
+    <link rel="preload" href="css/bootstrap.min.css" as="style" onload="this.rel='stylesheet'">
+    <link rel="stylesheet" href="css/aos.css" as="style">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="preload" href="css/style.css" as="style" onload="this.rel='stylesheet'">
+    
 
-
-    <link rel="icon" type="image/x-icon" href="img/logo.png" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
