--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
     <!-- STYLESHEET -->
 
-    <link rel="preload" href="css/bootstrap.min.css" as="style" onload="this.rel='stylesheet'">
-    <link rel="stylesheet" href="css/aos.css" as="style">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/aos.css" media="(min-width: 768px)">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
-    <link rel="preload" href="css/style.css" as="style" onload="this.rel='stylesheet'">
+    <link rel="stylesheet" href="css/style.css">
     
 
 
